kubernetes/yaml/echo.yaml
---
kind: Pod
apiVersion: v1
metadata:
  name: echo
  namespace: default
  labels:
    app: echo
spec:
  containers:
  - name: echo
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=Waddyat!?"
---
kind: Service
apiVersion: v1
metadata:
  name: echo
  namespace: default
spec:
  selector:
    app: echo
  ports:
  - port: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/echo"
        backend:
          service:
            name: echo
            port:
              number: 5678
